<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    
    android:padding="6dip">
    
    <TextView
        android:id="@+id/foodNetCarbs"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:layout_marginTop="6dip"
        android:layout_marginBottom="6dip"
        android:layout_marginLeft="6dip"
        android:text="@string/foodNetCarbs_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
        android:id="@+id/foodDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/foodNetCarbs"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:text="@string/foodDescription_text" 
        android:singleLine="true"
        android:ellipsize="marquee"/>
    
    <TextView
        android:id="@+id/foodServing"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/foodDescription"
        android:layout_toRightOf="@id/foodNetCarbs"
        android:text="@string/foodServing_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>